--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <LangVersion>10.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 </Project>
